--- a/index.html
+++ b/index.html
@@ -38,14 +38,6 @@
         </div>
     </div>
 
-    <script>
-        const accordion = document.querySelectorAll('.contentBx')
-
-        for(i = 0; i<accordion.length; i++){
-            accordion[i].addEventListener('click', function(){
-                this.classList.toggle('active')
-            })
-        }
-    </script>
+    <script src="./index.js"></script>
 </body>
 </html>
